changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Parameter to toggle exit info generation.
 utils/mapper.c
Nicolas Weeger, 2008-02-05

Simplify code.
 utils/mapper.c
Nicolas Weeger, 2008-02-05

Fix warnings.
 utils/mapper.c
Nicolas Weeger, 2008-02-04

Get the real map's name.
 utils/mapper.c
Nicolas Weeger, 2008-02-04

Keep pointer to region instead of just the name.
 utils/mapper.c
Nicolas Weeger, 2008-02-03

Major refactoring, to prepare for more fun things.
 utils/mapper.c
Nicolas Weeger, 2008-02-03

Generate information on 'slaying' fields. Not complete yet, missing
FORCE created by markers and other things.
 utils/mapper.c
Nicolas Weeger, 2008-02-03

Add lore information to map page.
 utils/mapper.c
Added files:
 utils/templates/map_lore.template map_no_lore.template
Nicolas Weeger, 2008-02-03

common/object.c: fix memory leak.
Nicolas Weeger, 2008-02-03

Remove weather code, unused and messy.
 include/global.h sproto.h tod.h
 common/init.c map.c
 lib/i18n/messages.en messages.fr settings
 server/c_misc.c commands.c init.c weather.c
Nicolas Weeger, 2008-02-01

Fix for bug #1882265: Server failure when all exp_table entries commented out.
 common/exp.c: exit() in case of errors.
 lib/exp_table: enable a table by default.
Nicolas Weeger, 2008-02-01

plugins/cfanim/cfanim.c,
plugins/cfanim/include/cfanim.h,
plugins/cfanim/include/cfanim_proto.h:
  Changed the name of variables that some C compilers considered as
  keywords.
Yann "gros" Chachkoff 2008-02-01

socket/request.c: trash obsolete code (and version is checked for >= 1027 anyway).
Nicolas Weeger, 2008-01-30
